[tool.poetry]
name = "gino-sanic"
version = "20.09.2021"
description = "An extension for GINO to integrate with Sanic"
license = "BSD-3-Clause"
authors = ["Samuel Li <lbhsot@163.com>"]
maintainers = []
readme = "README.md"
homepage = "https://github.com/python-gino/gino-sanic"
repository = "https://github.com/python-gino/gino-sanic"
documentation = "https://python-gino.org/docs/"
keywords = ["sqlalchemy", "python3", "sanic", "gino"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.7"
gino = { version = "^1.0.0rc2", allow-prereleases = true }
sanic = "^21.6.2"

[tool.poetry.dev-dependencies]
black = { version = "^21.9b0", python = ">=3.7" }

# tests
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
sanic-testing = "^0.6.0"

[tool.poetry.plugins."gino.extensions"]
"sanic" = "gino_sanic"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
